[project]
name = "fincept-terminal-api"
version = "0.1.0"
description = "FastAPI backend for the Fincept Terminal web migration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "orjson>=3.11.0,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "alembic>=1.14.0,<2.0.0",
  "yfinance>=0.2.50,<1.0.0",
  "pandas>=2.2.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
